[metadata]
name = Advanced GAM for Google Workspace
version = attr: gam.__init__.__version__
description = Command line management for Google Workspaces
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/taers232c/GAMADV-XTD3
author = Ross Scroggs
author_email = ross.scroggs@gmail.com
license = Apache
license_files = LICENSE
keywords = google, oauth2, gsuite, google-apps, google-admin-sdk, google-drive, google-cloud, google-calendar, gam, google-api, oauth2-client, google-workspace
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: Apache License

[options]
packages = find:
python_requires = >= 3.8
install_requires =
    lxml
    cryptography >= 40.0.1
    distro; sys_platform == 'linux'
    filelock >= 3.8.0
    google-api-python-client >= 2.82
    google-auth-httplib2 >= 0.1.0
    google-auth-oauthlib >= 1.0.0
    google-auth >= 2.16.3
    httplib2 >= 0.22.0
    passlib >= 1.7.4
    pathvalidate
    python-dateutil
    yubikey-manager >= 5.0

[options.package_data]
* = *.pem

# used during pip install .[test]
[options.extras_require]
test = pre-commit

[options.entry_points]
console_scripts =
    gam = gam.__main__:main

[bdist_wheel]
universal = True
